# kotaemon

./: Dockerfile  requirements.txt
libs/kotaemon/: pyproject.toml
