# build backand and build dependencies
[build-system]
requires = ["setuptools >= 61.0", "wheel", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false
packages.find.include = ["kotaemon*"]
packages.find.exclude = ["tests*", "env*"]

[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}"
dirty_template = "{tag}"
tag_filter = "v?\\d+(\\.\\d+)*.*"

# metadata and dependencies
[project]
name = "kotaemon"
dynamic = ["version"]
requires-python = ">= 3.10"
description = "Kotaemon core library for AI development."
dependencies = [
    "azure-ai-documentintelligence",
    "beautifulsoup4==4.12.3",
    "click==8.1.7",
    "cohere==5.3.3",
    "cookiecutter==2.6.0",
    "fast_langdetect",
    "fastapi==0.111.0",
    "gradio==4.31.0",
    "html2text==2024.2.26",
    "langchain==0.1.16",
    "langchain-community==0.0.34",
    "langchain-openai==0.1.4",
    "langchain-google-genai==1.0.3",
    "langchain-anthropic==0.1.9",
    "langchain-ollama==0.1.3",
    "langchain-mistralai==0.1.3",
    "langchain-cohere==0.2.4",
    "llama-hub==0.0.79",
    "llama-index==0.10.40",
    "chromadb==0.4.24",
    "llama-index-vector-stores-chroma==0.1.9",
    "llama-index-vector-stores-lancedb==0.1.7",
    "openai==1.23.6",
    "matplotlib==3.8.2",
    "matplotlib-inline",
    "openpyxl==3.1.2",
    "opentelemetry-exporter-otlp-proto-grpc==1.25.0",
    "pandas==2.2.2",
    "plotly==5.22.0",
    "PyMuPDF==1.24.1",
    "pypdf==4.2.0",
    "pylance",
    "python-decouple==3.8",
    "python-docx==1.1.0",
    "python-dotenv==1.0.1",
    "tenacity>=9.0.0,<10.0.0",
    "theflow==0.8.6",
    "trogon==0.5.0",
    "umap-learn==0.5.6",
    "tavily-python==0.4.0",
    "pydantic==2.7.1",
]
readme = "README.md"
authors = [
    { name = "@trducng", email = "john@cinnamon.is" },
    { name = "@lone17", email = "ian@cinnamon.is" },
    { name = "@taprosoft", email = "tadashi@cinnamon.is" },
    { name = "@cin-albert", email = "albert@cinnamon.is" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
adv = [
    "duckduckgo-search>=6.1.0,<6.2",
    "elasticsearch>=8.13.0,<8.14",
    "fastembed",
    "onnxruntime<1.20",
    "googlesearch-python>=1.2.4,<1.3",
    "llama-cpp-python<0.2.8",
    "llama-index>=0.10.40",
    "llama-index-vector-stores-milvus",
    "llama-index-vector-stores-qdrant",
    "sentence-transformers",
    "tabulate",
    "unstructured>=0.15.8,<0.16",
    "wikipedia>=1.4.0,<1.5",
    "voyageai>=0.3.0",
]
dev = [
    "black",
    "coverage",
    "flake8",
    "ipython",
    "pre-commit",
    "pytest",
    "pytest-mock",
    "sphinx",
]
all = ["kotaemon[adv,dev]"]

[project.scripts]
kotaemon = "kotaemon.cli:main"
